2021-04-09  Benjamin Yang  <be11ng@protonmail.com>

	* nethack.el (nethack-el-version): Bump version to 0.12.0.
	* enh-366.patch: Likewise.

2021-04-07  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: Fix extended commands.  Adds back in use of
	`extended_cmd_id' which I removed earlier since I didn't know what
	I was doing.

2021-03-22  Benjamin Yang  <be11ng@protonmail.com>

	* nethack.el (nethack-installed-p): Only check the major and minor
	versions to match the nethack-el version and lisp-patch.

2021-03-19  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: Move definition of `LISP_VERSION' from hints file
	`linux-lisp' to `patchlevel.h'.
	* mkpatch: Add `include/patchlevel.h' in patch.
	* nethack.el (nethack-installed-p): Check if the NetHack version
	and the lisp-patch version are up to date.
	(nethack-el-version): Bump to 0.11.0

2021-03-18  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: Hints file passes `LISP_VERSION' which can be
	read from the `--version' command line flag.

2021-03-16  Benjamin Yang  <be11ng@protonmail.com>

	Add .nethackrc parsing.  Add support for menucolors and
	rudimentary hilite-status options.

	* nethack-options.el: New file.
	(nethack-options-file, nethack-options-fields-percents)
	(nethack-options-fields-text-matches, nethack-options-fields)
	(nethack-options-cond-major-troubles)
	(nethack-options-cond-minor-troubles)
	(nethack-options-cond-movement, nethack-options-cond-all)
	(nethack-options-fields-characteristics)
	(nethack-options-status-field-p, nethack-options-attributes)
	(nh-attr-face, nethack-options-color-face)
	(nethack-options-menucolors, nethack-options-get-menucolors)
	(nethack-options-hilites, nethack-options-get-hilites)
	(nethack-options-parse-status-behav, nethack-options-parse-attr)
	(nethack-options-attr-propertize)
	(nethack-options-substitute-conditions)
	(nethack-options-parse-hilite-status)
	(nethack-options-parse-menucolor, nethack-options-parse-option-1)