@@ -11,9 +11,6 @@ I like what we have now, I think we can call this done.
 * low priority
 ** TODO tiles under xemacs
 
-** TODO scrolling the map should happen *before* you step across the edge
-   C-l now works, so you can manually recenter
-
 ** TODO turning on DEC graphics (for example) breaks things (invalid characters)
    We need to hardcode/override some of the preferences.
 
@@ -46,6 +43,9 @@ I like what we have now, I think we can call this done.
 ** TODO fix byte-compile warnings
 
 * finished, sorta?
+
+** DONE scrolling the map should happen *before* you step across the edge
+   C-l now works, so you can manually recenter
 
 ** DONE nethack options should be respected where possible
    in particular the color boolean
